# feedback

./: .env.example  .gitattributes  .prettierignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  astro.config.mjs  astro.config.ts  package.json  prettier.config.mjs  pyrightconfig.json  tailwind.config.js  tsconfig.json  ui.config.json  uno.config.ts  vercel.json
.augment/rules/: astro-typescript-solidjs-unocss.md
docs/: systemprompt-billedkunst.md  systemprompt-biologi.md  systemprompt-dansk.md  systemprompt-engelsk.md  systemprompt-fysikkemi.md  systemprompt-geografi.md  systemprompt-historie.md  systemprompt-kristendom.md  systemprompt-matematik.md  systemprompt-naturteknologi.md  systemprompt-samfundsfag.md  systemprompt-tysk.md
public/: pdf.worker.min.mjs
scripts/devserver/: devserver.py  pyproject.toml  run.sh
src/: env.d.ts
src/components/: AIProviderLogo.tsx  App.tsx  BalanceDisplay.tsx  CardExternalLinks.tsx  ChatInput.tsx  ChatWindow.tsx  CostBadge.tsx  EnhancedQualityPasswordDialog.tsx  ErrorMessageBubble.tsx  FallbackModelSelector.tsx  FileUpload.tsx  FooterIconBar.tsx  LanguageSwitcher.tsx  Logo.tsx  MessageBubble.tsx  MessageList.tsx  ModelPathStep.tsx  PasswordGate.tsx  ThemeSwitcher.tsx
src/components/onboarding/: AnonymizationStep.tsx  AssignmentStep.tsx  GradePreferenceStep.tsx  index.ts  (+8 more)
src/config/: models.ts  pricing.ts  subjectPrompts.ts  systemPrompt.ts
src/lib/: api.ts  auth.ts  errorUtils.ts  fileParser.ts  markdownRenderer.ts  promptLoader.ts  storage.ts  theme.ts  types.ts
src/pages/: index.astro
src/styles/: globals.css
(+41 files in other folders)
