[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devserver"
version = "0.1.0"
description = "Astro Development Server Manager - A Textual TUI application for managing the Astro development server, checking dependencies, configuring environment variables, and performing cleanup"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["astro", "devserver", "tui", "textual", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.85.0",
]

[project.scripts]
devserver = "devserver:main"

